SERVER-25039 Abort aggregation planning when a catalog operation occurs.

This prevents the aggregation system from trying to continue query
planning when the collection longer exists.